# el-libro-de-la-selva

./: .coverage  .gitignore  DOCUMENTATION.md  El-libro-de-la-selva.txt  README.md  chat.py  ingestor-el-libro-de-la-selva.py  pyproject.toml  requirements.txt  run_tests.py
el_libro_de_la_selva/: __init__.py  clustering.py  config.py  loader.py  prompts.py  retrieval.py  storage.py
el_libro_de_la_selva/cli/: chat.py  ingestor.py
tests/: README.md  conftest.py  test_chat.py  test_cli.py  test_clustering.py  test_config.py  test_init.py  test_loader.py  test_prompts.py  test_retrieval.py  test_storage.py
